--- a/DddWorkshops.Common/DddWorkshops.Common/DddWorkshops.Common.csproj
+++ b/DddWorkshops.Common/DddWorkshops.Common/DddWorkshops.Common.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.1.0" />
+  </ItemGroup>
+  
 </Project>
